Add image rights.

--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -63,7 +63,7 @@
 \parbox[b][\paperheight]{\paperwidth}{%
 \vfill
 \centering
-\includegraphics[width=\paperwidth]{VA013RN-0014-mask.png}%
+\includegraphics[width=\paperwidth]{background8.png}%
 \vfill
 }}}
 
@@ -71,7 +71,7 @@
 
 \author{\huge David A. Smith \and \huge Ryan Cordell}
 
-\date{\centering \vspace{0.2in} \includegraphics[width=5in]{northeastern.png} \vspace{0.5in} \\
+\date{\centering \vspace{0.2in} \includegraphics[width=5.5in]{northeastern.png} \vspace{0.5in} \\
   \includegraphics{nulab.png} \\
   \vspace{0.2in} \centering \huge with the support of \\ \vspace{0.1in}
   \includegraphics{mellon.png}}
@@ -81,11 +81,11 @@
 
 \maketitle
 
-\copyright 2018 David A. Smith and Ryan Cordell
+\noindent \copyright\ 2018 David A. Smith and Ryan Cordell
 
-Image credits
+\vspace{2em}
 
-The image of Venetus A (Marciana 822 = Graecus Z. 454) is derived from an original that is \copyright 2007, Biblioteca Nazionale Marciana, Venezia, Italia. The derivative image is \copyright 2010, Center for Hellenic Studies. All original and derivative images are licensed under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 License. The CHS/Marciana Imaging Project was directed by David Jacobs of the British Library.
+\noindent The background image on the title page of Venetus A (Marciana 822 = Graecus Z. 454) is derived from an original that is \copyright\ 2007, Biblioteca Nazionale Marciana, Venezia, Italia. The derivative image is \copyright\ 2010, Center for Hellenic Studies. The original and derivative images are licensed under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 License. The CHS/Marciana Imaging Project was directed by David Jacobs of the British Library.  The image of page segmentation is from Marmik Pandya.  The image of Arabic ligatures is from \cite{kiessling17:_impor_new_devel_arabog_optic}.  The image of the OCR correction interface is from the Lace project (\url{heml.mta.ca}) at Mount Allison University, directed by Bruce Robertson.
 
 \tableofcontents
 
@@ -263,7 +263,7 @@ One natural response to OCR errors is to attempt to correct them. Even if we ign
 
 Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
 
-Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. \cite{nelson17:_comput_groun_theor} conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences \citep{schofield16:_compar_apple}.}  \cite{franzini18:_attrib_author_noisy_digit_corres} showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry. In both cases, results on clean and automatically transcribed data were comparable. Bamman et al. (2018) showed that the performance of part-of-speech tagging on OCR output could approach that on clean text but that syntactic parsing accuracy was more severely degraded by errors. \cite{darwish02:_term_selec_searc_print_arabic} showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
+Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. \cite{nelson17:_comput_groun_theor} conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences \citep{schofield16:_compar_apple}.}  \cite{franzini18:_attrib_author_noisy_digit_corres} showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry. In both cases, results on clean and automatically transcribed data were comparable.  \cite{darwish02:_term_selec_searc_print_arabic} showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
 
 These measurements of the effect of OCR errors on downstream tasks are useful. To be usefully applied by scholars and readers such as those we surveyed, however, we need both (1) effective methods for unsupervised error estimation that go beyond OCR systems' own confidence estimation and (2) effective approaches to communicating and visualizing the effect of errors on the task at hand.
 
@@ -392,7 +392,7 @@ The OpenITI project's work on Kraken \citep{kiessling17:_impor_new_devel_arabog_
 
 The fundamental problem, therefore, when training an OCR model for a particular book or manuscript is efficiently incorporating training data from other projects. Matching on known metadata attributes, such as publisher, is subject to noise and may ignore relevant sources of information. In newspaper publishing, for example, we have records of the same sets of physical type being sold to other publishers. The relevant question for OCR systems, however, is not how similar two typefaces or hands are to the human eye, or in their lineage, but how useful data and models from one collection are in transcribing another.
 
-We therefore propose research focused on searching for and incorporating annotated data from multiple sources. In addition, we propose that work on online and offline adaptation of OCR models would greatly expand the robustness of systems for handwriting and print recognition in large, diverse collections, where scholars do not have the resources to produce training data for every hand and font. We expect that a focus on adaptation could help OCR follow the path of automatic speech recognition, where the past two decades have moved from speaker-specific supervised training to more robust, adaptive models embedded in mass-market phones and other appliances. (Speech recognition has not become as general as we would like: many widely-deployed systems still achieve lower accuracy with female speakers and with speakers in a wide variety of common accents.) Offline adaptation methods could be helped by approaches that exploit the similarity structure of large collections \citep{yalniz11:_partial_duplic_detec_large_book_collec} and that allow us to co-train image and language models. Hierarchical models of related typefaces could also connect this work to computational bibliography, e.g., for identifying the printers of anonymous pamphlets (Weingart et al., 2018).
+We therefore propose research focused on searching for and incorporating annotated data from multiple sources. In addition, we propose that work on online and offline adaptation of OCR models would greatly expand the robustness of systems for handwriting and print recognition in large, diverse collections, where scholars do not have the resources to produce training data for every hand and font. We expect that a focus on adaptation could help OCR follow the path of automatic speech recognition, where the past two decades have moved from speaker-specific supervised training to more robust, adaptive models embedded in mass-market phones and other appliances. (Speech recognition has not become as general as we would like: many widely-deployed systems still achieve lower accuracy with female speakers and with speakers in a wide variety of common accents.) Offline adaptation methods could be helped by approaches that exploit the similarity structure of large collections \citep{yalniz11:_partial_duplic_detec_large_book_collec} and that allow us to co-train image and language models. Hierarchical models of related typefaces could also connect this work to computational bibliography, e.g., for identifying the printers of anonymous pamphlets \citep{berg-kirkpatrick18:_print_probab}.
 
 \paragraph{Next steps:} We propose that funders interested in supporting efficient large-scale digitization and in domain adaptation for machine learning could make progress on these recommendations with:
 \begin{itemize}
@@ -415,9 +415,9 @@ While philologists and computational linguists have been developing computationa
 
 The \href{http://primeroslibros.org/}{Primeros Libros de las Américas} project at the University of Puebla and Texas A\&M, for example, provides a challenging testbed of books in sixteenth-century variants of Latin, Spanish, Nahuatl, and other languages---often with mixtures of these languages in, e.g., grammatical works and with significant orthographic variation within languages. In addition to including many grammatical works and preaching manuals with examples and texts in Nahuatl, Toltec, and other languages, this collection focuses on the period before the orthographic standardization prevailing now. Spellings of the same word vary not only across books but within books and pages. \cite{garrette15:_unsup_code_switc_multil_histor_docum_trans} showed how unsupervised learning in the Ocular system could achieve much better than baseline results on this corpus by explicitly modeling switching between languages and orthographic variation within them.
 
-The Open Islamicate Texts Initiative \citep[OpenITI:][]{miller18:_digit_textual_herit_premod_islam_world} employs Marshall Hodgson's \citeyearpar{hodgson74:_ventur_islam} term ``Islamicate'' specifically to include not only texts written in Arabic but in Persian, Ottoman Turkish, Urdu, and other Arabic-script languages of the Islamic world. Moreover, as with the multilingual texts in the \emph{Primeros Libros}, many texts in, e.g., Persian contain significant amount in Arabic. The OpenITI project will thus need to focus on building language models of multilingual, and specifically mixed-language, texts in order to expand its coverage beyond the initial focus on Arabic.
+The Open Islamicate Texts Initiative \citep[OpenITI:][]{miller18:_digit_textual_herit_premod_islam_world} employs Marshall Hodgson's \citeyearpar{hodgson74:_ventur_islam} term ``Islamicate'' specifically to include not only texts written in Arabic but in Persian, Ottoman Turkish, Urdu, and other Arabic-script languages of the Islamic world. Moreover, as with the multilingual texts in the \emph{Primeros Libros}, many texts in, e.g., Persian contain significant amount in Arabic. The OpenITI project will thus need to focus on building language models of multilingual, and specifically mixed-language, texts in order to expand its coverage beyond the initial focus on Arabic.  These issues of small, and variable, training sets faced by historical and multilingual OCR have much in common with the problems of applying NLP technologies more generally to languges without significant resources of linguistic data \citep{mager18:_chall_languag_techn_indig_languag_americ}. 
 
-We propose that builders of OCR models explicitly develop, train, and test their models on texts with mixed languages and a range of historical and dialectical variants. We also suggest the creation of annotated corpora in genres less likely to occur in modern collections, e.g., dictionaries, critical editions, commentaries, and grammatical works. From a practical standpoint, the builders of modern OCR systems will not perform this labor, and so it must fall to the interested scholarly communities. Early-modern book and manuscript transcription projects might also benefit from following the practice, exemplified above by the \emph{Primeros Libros} OCR effort, of explicitly modeling orthographic variation and code switching, in order to make the most of limited training data. Character-level language models, to supplement lexicon- and word-based models will also be helpful in this regard. Some projects, finally, may benefit from tuning their training objectives and evaluations to put more weight on rare, embedded languages. For some applications, for example, improving the recall of rare Nahuatl embedded in Spanish or Latin texts may provide an acceptable trade-off to slightly decreased precision elsewhere. These decisions ultimately affect use cases from retrieval to text mining, as discussed in the recommendations above on statistical analysis.
+We propose that builders of OCR models explicitly develop, train, and test their models on texts with mixed languages and a range of historical and dialectical variants.  We also suggest the creation of annotated corpora in genres less likely to occur in modern collections, e.g., dictionaries, critical editions, commentaries, and grammatical works. From a practical standpoint, the builders of modern OCR systems will not perform this labor, and so it must fall to the interested scholarly communities. Early-modern book and manuscript transcription projects might also benefit from following the practice, exemplified above by the \emph{Primeros Libros} OCR effort, of explicitly modeling orthographic variation and code switching, in order to make the most of limited training data. Character-level language models, to supplement lexicon- and word-based models will also be helpful in this regard. Some projects, finally, may benefit from tuning their training objectives and evaluations to put more weight on rare, embedded languages. For some applications, for example, improving the recall of rare Nahuatl embedded in Spanish or Latin texts may provide an acceptable trade-off to slightly decreased precision elsewhere. These decisions ultimately affect use cases from retrieval to text mining, as discussed in the recommendations above on statistical analysis.
 
 \paragraph{Next steps:} We propose that funders interested in language technologies for low-resource languages and code-switching and in digitization of underserved historical languages should support:
 \begin{itemize}
