--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -204,7 +204,7 @@ Most OCR research and systems, meanwhile, have developed without reference to ap
 
 While large-scale scanning projects have generally used off-the-shelf OCR products, several researchers on a smaller scale have found that domain-specific training and modeling provide significant gains in accuracy. The availability of open-source systems can give  scholars of particular languages the ability, though not always the computing and human resources, to build better systems. Bruce Robertson and colleagues have achieved significant improvements in OCR'ing ancient Greek using publisher-specific training sets and system combination.\footnote{\url{http://heml.mta.ca/lace/}}  \cite{springmann16:_ocr_histor_print_applic_build_diach_corpor} found that, for historical German herbal manuals printed between 1487 and 1870, training on diplomatic transcriptions with matched typefaces achieved over 99\% character accuracy. More encouragingly, even training on different historical typefaces could achieve character accuracies above 90\%. That work showed what could be done by retraining existing models. Dan Garrette and colleagues \citeyearpar{garrette15:_unsup_code_switc_multil_histor_docum_trans} built an unsupervised model to infer image and language models for historical texts mixing several languages.
 
-Beyond these humanities-specific applications, the overall landscape of OCR research has shifted significantly in the last decade. OCR systems in the past often involved a pipeline of page layout analysis that involved splitting lines, words, and even characters into separate image patches, which would then be classified. With those pipelines, connected scripts such as Arabic or even historically common ligatures in Latin script would present fundamentally different problems from recognizing cleanly separable characters. More recently, most state-of-the-art OCR systems have adopted neural network models with recurrent and convolutional architectures to transcribe entire lines of text at once.\footnote{Many systems now use these architectures. For applications to historical and multilingual scripts in particular, see, e.g., \cite{breuel13:_high_ocr_print_englis_frakt_lstm_networ} and \cite{kiessling17:_impor_new_devel_arabog_optic}.}  These systems, therefore, exhibit much less of a gap between separated and connected scripts---or indeed, between print and manuscript. We expect, therefore, that the problems of historical and multilingual OCR will find a receptive audience in the OCR research community.
+Beyond these humanities-specific applications, the overall landscape of OCR research has shifted significantly in the last decade. OCR systems in the past often involved a pipeline of page layout analysis that involved splitting lines, words, and even characters into separate image patches, which would then be classified. With those pipelines, connected scripts such as Arabic or even historically common ligatures in Latin script would present fundamentally different problems from recognizing cleanly separable characters. More recently, most state-of-the-art OCR systems have adopted neural network models with recurrent and convolutional architectures to transcribe entire lines of text at once.\footnote{Many systems now use these architectures, including, as of October 2018, the widely-used Tesseract system (\url{https://github.com/tesseract-ocr/tesseract}).  For applications to historical and multilingual scripts in particular, see, e.g., \cite{breuel13:_high_ocr_print_englis_frakt_lstm_networ} and \cite{kiessling17:_impor_new_devel_arabog_optic}.}  These systems, therefore, exhibit much less of a gap between separated and connected scripts---or indeed, between print and manuscript. We expect, therefore, that the problems of historical and multilingual OCR will find a receptive audience in the OCR research community.
 
 \section{Scope of this Report}
 
