Update Springmann and Luedeling.

--- a/ocr.bib
+++ b/ocr.bib
@@ -315,6 +315,16 @@
                   {http://scalar.usc.edu/works/sourcelab_idea/index.124}
 }
 
+@InProceedings{reul17:_larex,
+  author =	 {Christian Reul and Uwe Springmann and Frank Puppe},
+  title =	 {{LAREX} -- A Semi-Automatic Open-Source Tool for
+                  Layout Analysis and Region Extraction on Early
+                  Printed Books},
+  booktitle =	 {Proceedings of DATeCH},
+  year =	 2017,
+  url =		 {http://dx.doi.org/10.1145/3078081.3078097}
+}
+
 @Article{schofield16:_compar_apple,
   author =	 {Alexandra Schofield and David Mimno},
   title =	 {Comparing apples to {Apple}: The Effects of Stemmers
@@ -356,13 +366,24 @@
   pages =	 {195-197}
 }
 
-@Unpublished{springmann16:_ocr_histor_print_applic_build_diach_corpor,
+@article{springmann16:_ocr_histor_print_applic_build_diach_corpor,
   author =	 {Uwe Springmann and Anke Lüdeling},
   title =	 {{OCR} of Historical Printings with an Application to
                   Building Diachronic Corpora: A Case Study Using the
                   {RIDGES} Herbal Corpus},
   note =	 {arXiv preprint 1608.02153},
   year =	 2016
+}
+
+@Article{springmann17:_ocr_histor_print_applic_build_diach_corpor,
+  author =	 {Uwe Springmann and Anke Lüdeling},
+  title =	 {{OCR} of Historical Printings with an Application to
+                  Building Diachronic Corpora: A Case Study Using the
+                  {RIDGES} Herbal Corpus},
+  journal =	 {Digital Humanities Quarterly},
+  year =	 2017,
+  volume =	 11,
+  number =	 2
 }
 
 @Article{stauffer12:_ninet_centur_archiv_digit_age,
